# waterscreen_driver

./: .clang-format  .cproject  .gitignore  .project  LICENSE
aws_iot/iot-reference/examples/common/logging/: logging.h
board/: clock_config.c  clock_config.h  peripherals.c  peripherals.h  pin_mux.c  pin_mux.h
external_communication/: waterscreen_config_parser.c  waterscreen_config_parser.h
freertos/freertos-kernel/include/: FreeRTOS.h
source/: FreeRTOSConfig.h  common_types.h  common_utils.c  common_utils.h  container_types.h  main.c  pictures.c  pictures.h  valves_spi_cfg.h  water_sensors.h  waterscreen_prototype.c  waterscreen_state_context.c  waterscreen_state_context.h  waterscreen_states.c
source/ble/: ble_handler_task.c  ble_handler_task.h  ble_irq_handler.c  ble_receiver.c  ble_receiver.h  ble_send_provider.c  ble_send_provider.h  ble_sender.c  ble_sender.h  receiver_data_types.h  receiver_handlers.c  receiver_handlers.h
source/config/: FreeRTOSConfig.h  WiFiCfg-example.h  logging_config.h  oled_i2c_cfg.h  rtos_time_defines.h  valves_spi_cfg.h  waterscreen_config.c  waterscreen_config.h  waterscreen_config_data.c  wifi_cfg-example.h  wifi_cfg.c
source/datetime/: datetime_parser.c  datetime_parser.h  datetime_types.h  datetime_utils.c  datetime_utils.h  rtc_provider.c  rtc_provider.h
source/external_communication/: datetime_api.c  http_get_utils.c  http_get_utils.h  http_return_codes.h  http_utils.c  waterscreen_config_api.c  waterscreen_config_api.h  waterscreen_config_parser.c  waterscreen_config_parser.h  waterscreen_status.c  waterscreen_status.h  waterscreen_status_api.c  waterscreen_status_serializer.c  waterscreen_status_serializer.h  weather_api.c  weather_api.h  weather_parser.c  weather_types.h  wifi_task.c  wifi_task.h  wlan_adapter.c  wlan_adapter.h
source/gpio/: button_control.c  button_control.h  led_control.c  led_control.h  power_control.c  power_control.h  sensors_control.c  sensors_control.h
source/hmi/: hmi_task.c  lcd_panel.c  lcd_panel.h  switch-off.h  switch-on.h  switch_off.h  switch_on.h
source/http/: datetime_api.c  datetime_api.h  http_return_codes.c  http_return_codes.h  http_utils.c  http_utils.h  waterscreen_config_api.c  waterscreen_config_api.h  waterscreen_config_parser.c  waterscreen_config_parser.h  waterscreen_status_api.h  waterscreen_status_serializer.c  weather_api.c  weather_api.h  weather_parser.h  webpicture_api.c  webpicture_api.h  webpicture_parser.c  webpicture_parser.h  wifi_task.c
source/lcd_screen/: hmi_task.c  lcd_panel.c  lcd_panel.h
source/neopixels/: color.c  color.h  converter_utils.c  converter_utils.h  neopixel_converter.c  neopixel_converter.h  neopixel_defines.h  neopixel_provider.c  neopixel_provider.h
source/oled_screen/: hmi_task.c  hmi_task.h  oled_panel.c  oled_panel.h
source/picture_management/: custom_picture_logic.c  custom_picture_logic.h  demo_mode_picture_logic.c  demo_mode_picture_logic.h  picture_data.c  picture_data.h  picture_data_constants.h  picture_logic_utils.c  picture_logic_utils.h  picture_types.h  standard_mode_picture_getters.c  standard_mode_picture_getters.h  standard_mode_picture_logic.c  standard_mode_picture_logic.h
source/picture_managment/: custom_picture_logic.c  custom_picture_logic.h  demo_mode_picture_logic.c  demo_mode_picture_logic.h  picture_data.c  picture_data.h  picture_data_constants.h  picture_logic.c  picture_logic.h  picture_logic_utils.c  picture_logic_utils.h  picture_types.h  standard_mode_picture_logic.c  standard_mode_picture_logic.h
source/rtos_tasks/: rtos_tasks.c  rtos_tasks.h  rtos_time_defines.h
source/spi_transfer/: spi_transfer.c  spi_transfer.h
source/status_logging/: status_logging.c  status_logging.h
source/waterscreen_state/: presentation_state_machine_task.c  presentation_state_machine_task.h  realtime_mode.c  realtime_mode.h  standard_mode_state.c  standard_mode_state.h  state_utils.c  state_utils.h  validation.c  validation.h  waterscreen_state_context.c  waterscreen_state_context.h  waterscreen_state_context_handler.c  waterscreen_state_context_handler.h  waterscreen_states.c  waterscreen_states.h
tests/: .clang-format  .gitignore  CMakeLists.txt  main.c  test_main.c  test_main.h
tests/cmake/: FetchCMocka.cmake
tests/src/: ble_receiver_handlers_test.c  color_converter_test.c  common_state_assert.c  common_state_assert.h  config_parser_test.c  datetime_parser_test.c  demonstration_state_test.c  idle_state_test.c  low_water_state_test.c  mocked_functions.h  neopixel_converter_test.c  neopixel_converter_utils_test.c  picture_logic_standard_mode_getters.c  picture_logic_standard_mode_getters_test.c  picture_logic_standard_mode_test.c  presentation_state_test.c  sensors_test.c  standard_state_test.c  test_main.c  valves_test.c  waterscreen_status_serializer_test.c  weather_parser_test.c  webpicture_parser_test.c
tests/src/mocks/: config_data_mock.c  context_handler_mocks.c  datetime_mocks.c  datetime_mocks.h  digital_signaling_mocks.c  digital_signaling_mocks.h  neopixels_mocks.c  picture_data_mock.c  picture_data_mocks.c  picture_data_mocks.h  picture_logic_mocks.c  picture_logic_mocks.h  standard_mode_mock.c  states_mocks.c  weather_mocks.c  weather_mocks.h
tests/src/utils/: common_state_assert.c  common_state_assert.h  mocked_functions.c  mocked_functions.h
uCUnit/: System.c  uCUnit.h
